--- a/Todo/src/test/kotlin/resources/application.properties
+++ b/Todo/src/test/kotlin/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./data/proddb
+spring.datasource.url=jdbc:h2:file:./data/testdb
 spring.datasource.username=name
 spring.datasource.password=password
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.mode=always
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.port=8081
